# agent-budget-framing

./: .gitignore  README.md  agent.py  analyze.py  analyze_clean.py  analyze_panel.py  analyze_time.py  conditions.py  db.py  judge.py  pyproject.toml  rejudge.py  run_experiment.py  tasks.py
results/: contrasts.csv  exp3_time.rejudged.jsonl  summary.csv  trials.csv
runs/: exp3_full.jsonl  exp3_time.jsonl  full.jsonl  panel_haiku.jsonl  pilot.jsonl
