[project]
name = "budget-framing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepeval>=4.0.5",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "openai>=2.40.0",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "scipy>=1.17.1",
    "statsmodels>=0.14.6",
    "tenacity>=9.1.4",
    "tqdm>=4.67.3",
]
